# aquant.sdk.python

./: .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: deployment.yml  python-publish.yml
app/: main.py
app/api/: create_app.py
app/api/middleware/: __init__.py  cors_middleware.py  logger_middleware.py
app/core/config/: __init__.py  settings.py
app/core/database/: __init__.py  database_interface.py  postgres_database.py  redis_database.py
app/core/dependencies/config/: __init__.py  settings.py
app/core/dependencies/databases/: __init__.py  postgres_database.py  redis_database.py
app/core/dependencies/exceptions/: __init__.py  http_exception_handlers.py
app/core/dependencies/http/: __init__.py  http_client.py
app/core/dependencies/logger/: __init__.py  logger.py
app/core/dependencies/providers/: get_token_service.py  get_user_service.py
app/core/exceptions/app/: __init__.py  app_exceptions.py
app/core/exceptions/http/: __init__.py  http_exception.py  http_exception_handler.py  http_exception_handler_interface.py
app/core/exceptions/repositories/: __init__.py  repositories_exceptions.py
app/core/logger/: __init__.py  formatter.py  logger.py  logger_interface.py
app/core/utils/: __init__.py  json_encoder.py  token_manager.py
app/domains/permission/dtos/: permission_shcemas.py
app/domains/permission/entities/: permission.py
app/domains/permission/services/: __init__.py
app/domains/role/dtos/: __init__.py  role_schemas.py
app/domains/role/entities/: role.py
app/domains/role/interfaces/: __init__.py  role_repository_interface.py
app/domains/role/repositories/: __init__.py  role_repository.py
app/domains/role/services/: __init__.py  base_client_service.py
app/domains/token/dtos/: __init__.py  token_schemas.py
app/domains/token/entities/: __init__.py  token.py
app/domains/token/interfaces/: __init__.py  token_repository_interface.py
app/domains/token/repositories/: token_repository.py
app/domains/token/schemas/: __init__.py  token_schemas.py
app/domains/token/services/: token_service.py
app/domains/user/dtos/: __init__.py  user_schemas.py
app/domains/user/entities/: user.py
app/domains/user/interfaces/: __init__.py  user_repository_interface.py
app/domains/user/repositories/: user_repository.py
app/domains/user/services/: __init__.py  user_service.py
app/domains/user_role/dtos/: __init__.py  user_role_schemas.py
app/domains/user_role/entities/: user_role.py
app/domains/user_role/services/: base_client_service.py
app/infra/adapters/http/: __init__.py  http_client_adapter.py  http_interface.py
app/infra/database/models/: __init__.py  base.py  permission.py  role.py  role_permission.py  token.py  user.py  user_roles.py
app/ui/cli/: main.py
app/ui/rest/routes/: __init__.py  register_routes.py
app/ui/rest/routes/users/: users.py
aquant/: __init__.py  main.py  settings.py
aquant/api/: brokers_mock.py
aquant/api/base/: http_client.py  http_exceptions.py  logger.py
aquant/api/base/interfaces/: __init__.py  http_interface.py  logger_interface.py
aquant/api/base/types/: __init__.py
aquant/core/dependencies/containers/: __init__.py  aquant_container.py  broker_container.py  marketdata_container.py  open_high_low_close_volume_container.py  security_container.py  trade_container.py
aquant/core/dependencies/providers/: __init__.py  create_logger_provider.py  init_nats_client.py  init_redis_client.py
aquant/core/logger/: __init__.py  logger.py  logger_formatter.py
aquant/core/serializers/: __init__.py  binary_serializer.py
aquant/core/utils/: __init__.py  weak_lru.py
aquant/domains/broker/entity/: broker.py
aquant/domains/broker/service/: broker_service.py
aquant/domains/broker/utils/: __init__.py  parse_brokers_binary_to_dataframe.py  parse_brokers_binary_to_string.py
aquant/domains/brokers/: __init__.py  broker_service.py  broker_service_mock.py  brokers_dict.py
aquant/domains/marketdata/interface/: __init__.py  marketdata_repository_interface.py
aquant/domains/marketdata/repository/: __init__.py  marketdata_repository.py
aquant/domains/marketdata/service/: __init__.py  marketdata_service.py
aquant/domains/security/entity/: security.py
aquant/domains/security/service/: __init__.py  security_service.py
aquant/domains/security/utils/: __init__.py  security_formatter.py  security_payload_builder.py
aquant/domains/utils/: parse_trades_binary_to_dataframe.py
aquant/infra/nats/: __init__.py  nats_client.py  nats_interface.py  nats_subjects_enum.py
aquant/infra/redis/: __init__.py  client.py  consumer.py  decorator.py  processor.py  utils.py
aquant/redis/: consumer.py  decorator.py  utils.py
aquant/tests/: test_client.py  test_consumer.py  test_processor.py
aquant_sdk/: settings.py
aquant_sdk/api/: __init__.py  broker.py
aquant_sdk/api/base/: http_client.py  http_exceptions.py  logger.py
aquant_sdk/core/utils/: __init__.py  parse_trades_binary_to_dataframe.py
aquant_sdk/redis/: __init__.py  client.py  consumer.py  decorator.py  exceptions.py  processor.py
aquant_sdk/tests/: test_client.py  test_consumer.py  test_processor.py
(+43 files in other folders)
