[tool.poetry]
name = "aquant-sdk-python"
version = "0.1.0"
description = "aquant.sdk.python is a software developer kit for aquant market data"
authors = [
    "Davi Ferreira <academic.dave.ito@gmail.com>",
    "Lucius Gaitán <lucius@luciusgaitan.com>"
]
license = "UNLICENSED"
readme = "README.md"
packages = [
    { include = "aquant" }
]

[tool.poetry.dependencies]
python = ">=3.10" 
pydantic = "^2.10.5"
dependency-injector = "^4.44.0"
pydantic-settings = "^2.7.1"
python-json-logger = "^3.2.1"
httpx = "^0.28.1"
mccabe = "^0.7.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.2.1"
pandas = "^2.2.3"
nats-py = "^2.9.0"
numpy = "^2.2.2"
memory-profiler = "^0.61.0"
orjson = "^3.10.15"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
gitlint = "^0.19.1"
ruff = "^0.8.6"
autopep8 = "^2.3.1"
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pyflakes = "^3.2.0"
pycodestyle = "^2.12.1"
autoflake = "^2.3.1"
flake8 = "^7.1.1"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]
target-version = "py313"

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false 

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.5.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# aquant-sdk-cli = "aquant_sdk.main:cli"

[tool.poetry.extras]
all = [
    "pytest",
    "pytest-cov",
    "ruff",
    "autopep8"
]

# Incluindo arquivos extras no build diretamente no `[tool.poetry]`
include = ["README.md", "LICENSE", "aquant_sdk"]
